--- a/01-Android/app/src/main/res/values/strings.xml
+++ b/01-Android/app/src/main/res/values/strings.xml
@@ -1,8 +1,29 @@
 <resources>
-    <string name="app_name">ccgr12024b_cabm</string>
-    <string name="saludo">Hello Friends</string>
-    <string name="mensaje">Port En</string>
-    <string name="dosmensaje">Lands En</string>
-    <color name="saludo_color">#2EA7B6</color>
+    <string name="app_name" translatable="false">ccgr12024b_cabm</string>
+    <string name="saludo" translatable="false">Hello Friends</string>
+    <color name="saludo_color">#CD8915</color>
 
+    <string-array name="string_array_opciones_dialogo">
+        <item>Lunes</item>
+        <item>Martes</item>
+        <item>Miercoles</item>
+    </string-array>
+
+
+    <string name="title_activity_aciclo_vida" translatable="false">ACicloVida</string>
+
+    <!-- Preference Titles -->
+    <string name="messages_header" translatable="false">Messages</string>
+    <string name="sync_header" translatable="false">Sync</string>
+
+    <!-- Messages Preferences -->
+    <string name="signature_title" translatable="false">Your signature</string>
+    <string name="reply_title" translatable="false">Default reply action</string>
+
+    <!-- Sync Preferences -->
+    <string name="sync_title" translatable="false">Sync email periodically</string>
+    <string name="attachment_title" translatable="false">Download incoming attachments</string>
+    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
+    </string>
+    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
 </resources>
