--- a/01-Android/app/src/main/res/values/strings.xml
+++ b/01-Android/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
     </string>
     <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
+    <string name="title_activity_ggoogle_maps_placeholder">GGoogleMapsPlaceholder</string>
 </resources>
